RESOLVED FIXED305369
REGRESSION (Safari 26.x): CSS rules within @scope not applied to input and textarea
https://bugs.webkit.org/show_bug.cgi?id=305369
Summary REGRESSION (Safari 26.x): CSS rules within @scope not applied to input and te...
nicolas
Reported 2026-01-13 01:24:35 PST
Created attachment 477978 [details] Test sample that shows the unexpected behavior. It appears that there is not way to apply css rules to an input anymore when they are declared in a @scope, bounded or not. For the following snippet (see attachement) <style> @scope (.test) { input { border: blue solid 1rem; } } input { outline: red solid 1rem ; } </style> <input type="text" placeholder="Test Input"> Expected result: The input should show both blue border and red outline. Actual result: The input only show the blue border and the red outline is mssing. This behavior is not reproductible on pre-26 safari, but appears in all 26.2, tech preview and webkit archive.
Attachments
Test sample that shows the unexpected behavior. (529 bytes, text/html)
2026-01-13 01:24 PST, nicolas
no flags
Radar WebKit Bug Importer
Comment 1 2026-01-13 16:02:25 PST
Matthieu Dubet
Comment 2 2026-01-20 13:00:27 PST
EWS
Comment 3 2026-01-23 16:09:01 PST
Committed 306129@main (a6e8f5201887): <https://commits.webkit.org/306129@main> Reviewed commits have been landed. Closing PR #56921 and removing active labels.
Tim Nguyen (:ntim)
Comment 4 2026-02-24 19:45:04 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58025
Anne van Kesteren
Comment 5 2026-03-18 04:03:50 PDT
*** Bug 310023 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.