Cherry-pick a6e8f5201887. rdar://169751338

[CSS] Fix @scope crossing UA shadow root
    https://bugs.webkit.org/show_bug.cgi?id=305369
    rdar://168101378

    Reviewed by Anne van Kesteren.

    Test: imported/w3c/web-platform-tests/css/css-cascade/scope-ua-shadow-host.html
    * LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-ua-shadow-host-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-ua-shadow-host.html: Added.
    * Source/WebCore/style/ElementRuleCollector.cpp:
    (WebCore::Style::ElementRuleCollector::scopeRulesMatch):

    Canonical link: https://commits.webkit.org/306129@main

Identifier: 305413.260@safari-7624-branch